--- a/FirstTest/app/src/main/AndroidManifest.xml
+++ b/FirstTest/app/src/main/AndroidManifest.xml
@@ -7,12 +7,22 @@
         android:hardwareAccelerated="false"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/app_name1"
         android:theme="@style/AppTheme" >
         <activity
             android:name="test.AnDraw.MainActivity"
 
-            android:label="@string/app_name" >
+            android:label="@string/app_name1" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="test.AnDraw.DrawActivity"
+            android:label="@string/app_name2" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
