--- a/FirstTest/app/src/main/AndroidManifest.xml
+++ b/FirstTest/app/src/main/AndroidManifest.xml
@@ -1,35 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="test.AnDraw" >
-
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
-        android:allowBackup="true"
         android:hardwareAccelerated="false"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name1"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name1"
-            android:screenOrientation="locked">
+            android:name="test.AnDraw.MainActivity"
+
+            android:label="@string/app_name1" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
-            android:name=".DrawPicActivity"
-            android:label="@string/app_name2"
-            android:screenOrientation="locked">
-        </activity>
-        <activity
-            android:name=".DrawBlankActivity"
-            android:label="@string/app_name3"
-            android:screenOrientation="locked">
+            android:name="test.AnDraw.DrawActivity"
+            android:label="@string/app_name2" >
         </activity>
     </application>
 
