--- a/FirstTest/app/src/main/AndroidManifest.xml
+++ b/FirstTest/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:allowBackup="true"
         android:hardwareAccelerated="false"
-        android:icon="@mipmap/icon"
+        android:icon="@mipmap/icon2"
         android:label="@string/app_name1"
         android:theme="@style/AppTheme" >
         <activity
