--- a/FirstTest/app/src/main/AndroidManifest.xml
+++ b/FirstTest/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name1"
-            android:screenOrientation="locked">
+            android:screenOrientation="locked" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,12 +24,16 @@
         <activity
             android:name=".DrawPicActivity"
             android:label="@string/app_name2"
-            android:screenOrientation="locked">
+            android:screenOrientation="locked" >
         </activity>
         <activity
             android:name=".DrawBlankActivity"
             android:label="@string/app_name3"
-            android:screenOrientation="locked">
+            android:screenOrientation="locked" >
+        </activity>
+        <activity
+            android:name=".AboutActivity"
+            android:label="@string/title_activity_about" >
         </activity>
     </application>
 
